src/assets/css/library.css
body {
    overflow: hidden;
}
#main-navbar {
    padding: 3vh;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 50;
    width: 100%;
    -webkit-user-select: none;
    user-select: none;
    -webkit-app-region: drag;

    border-bottom: .5px solid rgba(0, 0, 0, 0.1);
}

#close-app-icon,
#minimize-app-icon {
    stroke: black;
    transition: stroke .2s;
}

#close-app-icon:hover {
    stroke: var(--primary-red-color) !important;
}

#minimize-app-icon:hover {
    stroke: rgba(0, 0, 0, 0.7) !important;
}
#edit-books-button {
    fill: black;
}

#edit-books-button.currently-editing {
    fill: var(--primary-red-color)
}
#add-books-button line{
    stroke: black;
}

#sidebar-settings {
    width: 300px;
    padding: 30px;
    border-right: .5px solid rgba(0, 0, 0, 0.1);
}
#back-to-dashboard {
    opacity: .5;
    text-decoration: none;
    transition: opacity .3s;
}
#back-to-dashboard:hover {
    opacity: 1;
}

#sorting-settings {
    padding: 30px 0;
    gap: 20px;
}

.sorting-settings-choose {
    cursor: pointer;
    padding: 10px 20px;
    border-radius: 5px;
    background-color: #F3F3F3;
}

.sorting-settings-list {
    padding: 0;
    margin-top: 40px;
    list-style: none;
    display: none;
    position: absolute;
    z-index: 10;
    border-radius: 5px;
    background-color: white;
    box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, .1);
    overflow: hidden;
}

.sorting-settings-list li {
    padding: 10px 20px;
    transition: all .3s;
    cursor: pointer;
}

.sorting-settings-list li:hover {
    background-color: rgb(235, 235, 235) !important;
}

.sorting-settings-list li:not(:last-of-type) {
    border-bottom: 1px solid rgba(0, 0, 0, .1);
}
/* -------------------------------- */

#books-section {
    padding: 30px 30px 0 30px;
    position: relative;
    flex: 1;
    overflow: hidden;
}
#section-book-information-actions {
    justify-content: space-between;
}
#section-book-show-information,
#section-book-hide-information {
    cursor: pointer;
    opacity: .4;
}

#section-book-show-information {
    stroke: #717171;
}

#section-book-hide-information {
    fill: #717171;
}

#section-book-show-information.active,
#section-book-hide-information.active {
    opacity: 1;
}
#book-section-grid::-webkit-scrollbar {
    width: 7px;
    border-radius: 10px;
}

#book-section-grid::-webkit-scrollbar-track {
    background: #f1f1f1;
    border-radius: 10px;
}

#book-section-grid::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 10px;
}

#book-section-grid::-webkit-scrollbar-thumb:hover {
    background: #555;
}
#book-section-grid {
    margin: 30px 20px 0px 20px;
    display: grid;
    grid-template-columns: repeat(5, 140px);
    grid-template-rows: 214px;
    grid-column-gap: 30px;
    grid-row-gap: 20px;
    overflow-y: auto;
    overflow-x: hidden;
}

#book-section-grid .book-box {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

#book-section-grid .book-box:not(.not-empty):not(:last-of-type) {
    background-color: rgba(0, 0, 0, 0.05);
}

#book-section-grid .book-box.not-empty {
    border: 1px solid rgba(0, 0, 0, 0.08);
    cursor: pointer;
}

#book-section-grid .book-box img {
    width: 100%;
    height: 100%;
}

#book-section-grid .book-delete-icon {
    position: absolute;
    width: 25px;
    height: 25px;
    right: -10px;
    top: -10px;
    background-color: white;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
}

#book-section-grid .book-delete-icon svg {
    stroke: var(--primary-red-color);
    transition: stroke .3s;
}

.book-box .book-delete-icon:hover svg {
    stroke: white !important;
}

.book-box .book-delete-icon:hover {
    background-color: var(--primary-red-color) !important;
}

.book-box .book-box-image img {
    transition: all .2s;
}

.book-box.currently-editing {
    animation: shake .4s;
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -1px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(1px, 1px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 1px) rotate(-1deg); }
  60% { transform: translate(-1px, 1px) rotate(0deg); }
  70% { transform: translate(1px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 1px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}

.book-box.currently-editing .book-box-image img {
    filter: blur(4px) brightness(80%);
}

.book-box:not(.currently-editing) .book-delete-icon {
    display: none;
    opacity: 0;
}

.book-box.currently-editing .book-delete-icon {
    transition: all .2s;
    /* display: flex; */
    opacity: 1 !important;
}

.book-box-informations {
    position: absolute;
    padding: 2vh;
    background-color: rgba(0, 0, 0, .9);
    gap: 1vh;
    transition: opacity .3s;
    opacity: 0;
}

.book-box-informations h1 {
    font-size: 17px;
    width: 100%;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 5;
    -webkit-box-orient: vertical;
}

.book-box-informations h2 {
    font-size: 15px;
}

.book-box-informations h3 {
    font-size: 13px;
}

.no-book-text {
    position: absolute;
    color: black;
    margin: auto;
    margin: auto;
    left: 0;
    right: 0;
    top:45%
}

#section-book-loading-animation {
    background-color: rgba(0, 0, 0, .5);
    position: absolute;
    z-index: 50;
    transition: opacity .3s;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

#section-book-loading-animation.loaded {
    display: none;
}

.book-box .new-book-box {
    position: absolute;
    width: 40px;
    height: 25px;
    left: -10px;
    top: -10px;
    background-color: #8D7DEF;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 5;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
}

.book-box .new-book-box h1 {
    font-size: 9px !important;
    letter-spacing: 1px;
    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
}
#search-bar-container {
    background-color: #F3F3F3;
    padding: 2vh 2.6vh;
    border-radius: 10px;
    margin: 0;
    margin-top: 30px;
}
#search-bar {
    gap: 2vh;
}
#search-bar svg {
    min-width: 16px;
    min-height: 16px;
}
#search-bar-input {
    color: black;
    font-family: 'Inter', sans-serif;
    font-weight: 400;
    font-size: 16px;
    border: none;
    background-color: transparent;
    width: 100%;
}
#search-bar-input:focus {
    outline: none;
}
#library-book-loading {
    width: 20px;
    height: 20px; 
}
#library-book-loading:after {
    content: " ";
    display: block;
    width: 15px;
    height: 15px;
    margin: 8px;
    border-radius: 50%;
    border: 2px solid #f3f3f3;
    border-top: 2px solid rgba(0, 0, 0, .7);
    animation: library-loading-logo 1s linear infinite;
}
@keyframes library-loading-logo {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

